# AWS-Fast-Channels

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  template.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-test.yml
MediaConvert/: app.py
MediaConvertJobTemplate/: generate_presets.py  presets.csv  template.yaml
MediaConvertSlatesCustomResource/: app.py
MediaPackage/: app.py
MediaTailor/: app.py
MediaTailorChannelCustomResource/: app.py
MediaTailorSourceLocationCustomResource/: app.py
assets/: presets.csv
deployment/: DEPLOYMENT.md  fast-on-aws.deployment  mediaconvert.deployment  samconfig.toml
deployment/.aws-sam/: build.toml
source/functions/media_convert_job/: app.py  event.json
source/functions/mediapackage_vod_asset/: app.py
source/functions/mediatailor_vod_source/: app.py  env.json
source/functions/sns_email_sender/: app.py  requirements.txt
source/layers/boto3/: requirements.txt
source/layers/crhelper/: requirements.txt
source/layers/xmltodict/: requirements.txt
source/resources/channel_assembly_channel/: app.py
source/resources/channel_assembly_slates/: app.py
source/resources/channel_assembly_source_location/: app.py
source/scripts/: SCRIPTS.md  generate_diagram.py  generate_presets.py  requirements.txt
