[project]
name = "aws-fast-channels"
version = "2.0.0"
description = "SAM project for FAST channel deployment on AWS using MediaTailor Channel Assembly"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "philhar88"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/philhar88/AWS-Fast-Channels"
Repository = "https://github.com/philhar88/AWS-Fast-Channels"
Documentation = "https://github.com/philhar88/AWS-Fast-Channels#readme"

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
